--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>json</artifactId>
             <version>20140107</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
